--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             <nav>
                 <a href="#Home">Home</a>
                 <a href="#About">About</a>  
-                <a href="#Resume">Resume</a>
                 <a href="#Contact">Contact</a>
             </nav></div>
         </header>
@@ -25,15 +24,11 @@
         </div>
         <div class="About" id="About">
             <h1>About</h1>
-            <p>Hi, I'm Mishal Safeek — a 22-year-old undergraduate at the University of Moratuwa, Faculty of Information Technology. I'm passionate about cybersecurity and networking, and I enjoy working with programming languages like C and Python. I'm continuously exploring new technologies and sharpening my skills to grow as a well-rounded tech professional.
+            <p>HHi, I'm Mishal Safeek — a 22-year-old undergraduate at the University of Moratuwa, Faculty of Information Technology. While my academic background is rooted in tech, with interests in cybersecurity, networking, and programming (especially in C and Python), I’ve recently developed a strong passion for photography.
 
-                Beyond tech, I have a strong interest in photography and photo editing. I enjoy capturing meaningful moments and using editing tools to creatively enhance visuals.</p>
+I’m a beginner in photography and photo editing, but I genuinely enjoy capturing meaningful moments and exploring creative ways to enhance visuals through editing. I'm eager to learn, grow, and gain hands-on experience, and I believe joining this club would be a great opportunity to develop my skills and contribute creatively.</p>
         </div>
-        <div class="Resume" id="Resume">
-            
-            <a href="resume.pdf" target="_blank">View My Resume</a>
-            <h2>Resume</h2>
-        </div>
+
         <footer><div class="foot-container">
             <h3>Contact</h3>
             <nav>
